[package]
name = "tucant_language_server_derive_output"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_with = "2"
tucant_language_server_derive = { path = "../tucant-language-server-derive" }

[build-dependencies]
tucant_language_server_derive_internal = { path = "../tucant-language-server-derive-internal" }
prettyplease = "0.1"
syn = { version = "1", features = ["full", "extra-traits"] }
