[package]
name = "tucant_language_server_derive_output"
version = "0.1.0"
edition = "2021"
description = "A nicer, faster and more featureful frontend to TUCaN"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mohe2015/tucant"
readme = "README.md"
keywords = ["tucan"]
categories = ["accessibility", "api-bindings", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_with = "2"
out-dir-include = { path = "../out-dir-include" }

[build-dependencies]
tucant_language_server_derive_internal = { path = "../tucant-language-server-derive-internal" }
prettyplease = "0.1"
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
