[package]
name = "tucant_language_server_derive_output"
version = "0.1.0"
edition = "2021"
description = "A nicer, faster and more featureful frontend to TUCaN"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mohe2015/tucant"
readme = "README.md"
keywords = ["tucan"]
categories = ["accessibility", "api-bindings", "caching"]

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# needed in build-script output code
serde           = { default-features = false, features = [ "alloc", "std", "derive"], version = "1" }
serde_repr      = { default-features = false, version = "0.1" }
serde_with      = { default-features = false, features = [ "macros" ], version = "2" }

out-dir-include = { default-features = false, path = "../out-dir-include" }

[build-dependencies]
tucant_language_server_derive_internal = { default-features = false, path = "../tucant-language-server-derive-internal" }
prettyplease = { default-features = false, version = "0.1" }
syn          = { default-features = false, version = "1" }
proc-macro2  = { default-features = false, version = "1" }
