[package]
name = "tucant_language_server_derive"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
tucant_language_server_derive_internal = { path = "../tucant-language-server-derive-internal" }
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
