[package]
name = "tucant-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
itertools = "0.10.5"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_with = "2"
tucant_language_server_derive_output = { path = "../tucant-language-server-derive-output" }
log = "0.4"
env_logger = "0.9"
regex = "1"
once_cell = "1"
rand = "0.8"
anyhow = { version = "1", features = ["backtrace"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"