[package]
name = "tucant-language-server"
version = "0.1.0"
edition = "2021"
description = "A nicer, faster and more featureful frontend to TUCaN"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mohe2015/tucant"
readme = "README.md"
keywords = ["tucan"]
categories = ["accessibility", "api-bindings", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
itertools = "0.10"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tucant_language_server_derive_output = { path = "../tucant-language-server-derive-output" }
once_cell = "1"
rand = "0.8"
anyhow = { version = "1", features = ["backtrace"] }
tokio-tungstenite = "0.18"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
json-rpc-server = { path = "../json-rpc-server" }
async-trait = "0.1"

[dev-dependencies]
env_logger = "0.10"