[package]
name = "tucant-language-server"
version = "0.1.0"
edition = "2021"
description = "A nicer, faster and more featureful frontend to TUCaN"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mohe2015/tucant"
readme = "README.md"
keywords = ["tucan"]
categories = ["accessibility", "api-bindings", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio             = { default-features = false, features = [ "fs", "net" ], version = "1" }
itertools         = { default-features = false, features = [ "use_std" ], version = "0.10" }
serde_json        = { default-features = false, features = [ "default", "raw_value" ], version = "1" }
serde             = { default-features = false, features = [ "alloc", "std", "derive" ], version = "1" }
tucant_language_server_derive_output = { default-features = false, path = "../tucant-language-server-derive-output" }
once_cell         = { default-features = false, version = "1" }
anyhow            = { default-features = false, version = "1" }
futures-util      = { default-features = false, version = "0.3" }
json-rpc-server   = { default-features = false, path = "../json-rpc-server" }
async-trait       = { default-features = false, version = "0.1" }
