[package]
name = "tucant-types"
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
utoipa = "5.3.1"
axum-core = "0.4.5"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "stream"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest-middleware = "0.4"


[lints]
workspace = true
