[package]
name = "tucant-yew"
version.workspace = true
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[features]
tauri = []
direct = ["dep:tucan-connector"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew/" }
wasm-bindgen = "0.2"
key-value-database = { path = "../key-value-database" }
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlDocument", "NodeList"] }
cookie = "0.18"
url = "2"
console_log = { version = "1", features = ["color"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }
tucant-types = { path = "../tucant-types" }
serde_json = "1"
web-extensions-sys = { git = "https://github.com/mohe2015/web-extensions-sys", branch = "cookies" }
yew-autoprops = "0.4.1"
tucan-connector = { optional = true, path = "../tucan-connector" }
js-sys = "0.3"
