[package]
name = "tucant-yew"
version.workspace = true
edition.workspace = true
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[features]
tauri = []
direct = ["dep:tucan-connector", "dep:web-extensions-sys"]
api = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { git = "https://github.com/mohe2015/yew", features = ["csr"], branch = "improve-html-macro-rust-analyzer-autocompletion" }
yew-router = { git = "https://github.com/mohe2015/yew", branch = "improve-html-macro-rust-analyzer-autocompletion" }
wasm-bindgen = "0.2"
key-value-database = { path = "../key-value-database" }
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlDocument", "NodeList", "HtmlSelectElement"] }
cookie = "0.18"
console_log = { version = "1", features = ["color"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tucant-types = { path = "../tucant-types" }
yew-autoprops = "0.4.1"
js-sys = "0.3"

tucan-connector = { optional = true, path = "../tucan-connector" }
web-extensions-sys = { optional = true, git = "https://github.com/mohe2015/web-extensions-sys", branch = "cookies" }

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true