[package]
name = "tucant_derive"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn          = { default-features = false, features = [ "full", "parsing", "proc-macro", "derive", "printing" ], version = "2" }
quote        = { default-features = false, version = "1" }
proc-macro2  = { default-features = false, version = "1" }
heck         = { default-features = false, version = "0.5" }
