[package]
name = "tucant_derive_lib"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { default-features = false, version = "0.4" }
axum   = { default-features = false, features = ["json"], version = "0.7" }
