[package]
name = "tucant-language-server"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio             = { default-features = false, features = [ "fs", "net" ], version = "1" }
itertools         = { default-features = false, features = [ "use_std" ], version = "0.11" }
serde_json        = { default-features = false, features = [ "default", "raw_value" ], version = "1" }
serde             = { default-features = false, features = [ "alloc", "std", "derive" ], version = "1" }
tucant_language_server_derive_output = { default-features = false, workspace = true }
once_cell         = { default-features = false, version = "1" }
anyhow            = { default-features = false, version = "1" }
futures-util      = { default-features = false, version = "0.3" }
json_rpc_server   = { default-features = false, workspace = true }
async-trait       = { default-features = false, version = "0.1" }
num-bigint        = { default-features = false, version = "0.4" }
num-integer       = { default-features = false, version =  "0.1" }
