[package]
name = "tucant_language_server_derive_output"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# needed in build-script output code
serde           = { default-features = false, features = [ "alloc", "std", "derive"], version = "1" }
serde_repr      = { default-features = false, version = "0.1" }
serde_with      = { default-features = false, features = [ "macros" ], version = "3" }

out_dir_include = { default-features = false, workspace = true }

[build-dependencies]
tucant_language_server_derive_internal = { default-features = false, workspace = true }
prettyplease = { default-features = false, version = "0.2" }
syn          = { default-features = false, version = "2" }
proc-macro2  = { default-features = false, version = "1" }
